<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="102dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultsText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="bottom|end"
                android:paddingStart="100dp"
                android:paddingTop="50dp"
                android:paddingEnd="10dp"
                android:text="@string/_567"
                android:textSize="45sp" />

            <ImageButton
                android:id="@+id/calcBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/equal_sign"
                android:src="@drawable/equal"
                app:layout_constrainedHeight="false"
                app:layout_constrainedWidth="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_7"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_8"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_9"
                android:textColor="#000000"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/divideBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/divide_sign"
                android:src="@drawable/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_4"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_5"
                android:textColor="#000000"
                android:textSize="36sp" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_6"
                android:textColor="#000000"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/multiplyBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/multilply_sign"
                android:src="@drawable/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_2"
                android:textColor="#000000"
                android:textSize="30sp" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:text="@string/_3"
                android:textColor="#000000"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/subtractBtn"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/minus_string_divide_sign"
                android:src="@drawable/subtract" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/_clear"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>

            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:background="@android:color/background_light"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/plusBtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:contentDescription="@string/plus_sign"
                android:src="@drawable/add" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>